manifests/rpi-frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rpi-surveillance
  namespace: rpi-surveillance
spec:
  selector:
    app: rpi-frontend
  ports:
    - name: http
      port: 5173
      targetPort: 5173
