manifests/rpi-frontend/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: rpi-surveillance
  namespace: rpi-surveillance
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`rpi-stream.cowlab.org`)
      kind: Rule
      services:
        - name: rpi-surveillance
          port: 5173
